# display-config

./: Cargo.toml  PKGBUILD  README.md  config.sample.yml  config.yml  match-dsl.ebnf
src/: apply.rs  configuration.rs  evaluator.rs  lexer.rs  main.rs  match_rule_parser.rs  matcher.rs  opt.rs  parser.rs  print.rs  xorg.rs  xrandr.rs
src/sources/: hyprland.rs  mod.rs  xrandr.rs
src/subcommands/: apply.rs  eval.rs  mod.rs  print.rs
